unpackaged/main/default/objects/tspa__Visual_Image__c/tspa__Visual_Image__c.object-meta.xml
<CustomObject>
    <description>Used to store image related information used on Visual History component.</description>
    <label>Visual Remote Assistant Reports Images</label>
    <nameField>
        <label>Visual Images Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant Reports Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>