unpackaged/main/default/objects/tspa__Visual_Image__c/fields/tspa__File_Name__c.field-meta.xml
<CustomField>
    <fullName>tspa__File_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>File Name</label>
    <length>254</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>