unpackaged/main/default/objects/tspa__Visual_Image__c/fields/tspa__fileUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__fileUrl__c</fullName>
    <label>fileUrl</label>
    <length>121072</length>
    <type>LongTextArea</type>
</CustomField>