unpackaged/main/default/objects/tspa__Visual_Image__c/fields/tspa__Image_Status__c.field-meta.xml
<CustomField>
    <fullName>tspa__Image_Status__c</fullName>
    <label>Image Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Pending Deletion</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Error State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>