unpackaged/main/default/objects/tspa__Visual_Image__c/fields/tspa__OCR_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__OCR_Value__c</fullName>
    <label>OCR Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>