unpackaged/main/default/objects/tspa__Visual_Image__c/fields/tspa__Visual_History__c.field-meta.xml
<CustomField>
    <fullName>tspa__Visual_History__c</fullName>
    <label>Visual History</label>
    <referenceTo>tspa__Visual_History__c</referenceTo>
    <relationshipName>Visual_Images</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>