unpackaged/main/default/objects/tspa__Visual_Image__c/listViews/tspa__All.listView-meta.xml
<ListView>
    <fullName>tspa__All</fullName>
    <columns>NAME</columns>
    <columns>tspa__File_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>tspa__Related_Tags__c</columns>
    <columns>tspa__Session_Id__c</columns>
    <columns>tspa__Visual_History__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>